2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Split long string

	* tools/trietool.c (usage):
	  - Split help message which was too long and required C90 compiler.
	    Caught by '-Woverlength-strings' gcc option.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Remove unused byte, word, dword typedefs

	These are likely to conflict with other uses.

	* datrie/typedefs.h (-byte, -word, -dword):
	  - Remove the unused typedefs

	Thanks Peter Moulder for the patch.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Rename TRUE/FALSE in Bool enum to avoid clash

	Some other header file may have already define TRUE/FALSE.

	* datrie/typedefs.h (Bool):
	  - Rename FALSE, TRUE to DA_FALSE, DA_TRUE respectively,
	    and define FALSE, TRUE macros only if they haven't been defined.

	Thanks Peter Moulder for the patch.

2018-06-04  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Declare argument-less functions with "(void)"

	"f()" declaration form is K&R style, specifying that no information
	about the number or types of parameters is supplied. This caused
	warnings on '-Wstrict-prototypes' gcc option.

	* datrie/alpha-map.h, datrie/alpha-map.c (alpha_map_new):
	* datrie/darray.h, datrie/darray.c (da_new, symbols_new):
	* datrie/tail.h, datrie/tail.c (tail_new):
	* tests/utils.h, tests/utils.c (en_alpha_map_new, en_trie_new):
	  - Use "(void)" form in declaration
	  - Also use "(void)" form in definition, for consistency

	Thanks Peter Moulder for the initial patch.

2018-05-24  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Remove duplicate include

	* tools/trietool.c:
	  - Remove duplicate include <config.h>

2018-04-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Add missing include in test

	* tests/test_byte_alpha.c:
	  - Add missing include for utils.h

2018-04-23  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	* configure.ac:
	  - Bump library revision to reflect code changes.

	* NEWS: